# python-project-50

./: .coverage  .gitignore  .ruff.toml  Makefile  README.md  demo.cast  pyproject.toml  setup.cfg
gendiff/: cli.py  diff.py  generate_diff.py  main.py  parser.py
gendiff/scripts/: gendiff.py
gendiff/views/: format.py  plain.py  stylish.py
tests/: test_diff.py
tests/fixtures/: plain
